test/Fail/ModuleArityMismatchEmptyTel.err
ModuleArityMismatchEmptyTel.agda:6.3-20: error: [ModuleArityMismatch]
The module M is not parameterized, but is being applied to
arguments
when checking the module application module M′ = M Set
